@@ -3012,6 +3012,7 @@ for-value   NIL or T
        (MAPLAP . c-MAPLAP)
        (TYPEP . c-TYPEP)
        (FORMAT . c-FORMAT)
+       ;; COMPLEMENT tricks
        (REMOVE-IF . c-REMOVE-IF)
        (REMOVE-IF-NOT . c-REMOVE-IF-NOT)
        (DELETE-IF . c-DELETE-IF)
@@ -3036,6 +3037,36 @@ for-value   NIL or T
        (ASSOC-IF-NOT . c-ASSOC-IF-NOT)
        (RASSOC-IF . c-RASSOC-IF)
        (RASSOC-IF-NOT . c-RASSOC-IF-NOT)
+       (ADJOIN . c-TEST/TEST-NOT)
+       (NSET-DIFFERENCE . c-TEST/TEST-NOT)
+       (SEARCH . c-TEST/TEST-NOT)
+       (ASSOC . c-TEST/TEST-NOT)
+       (NSET-EXCLUSIVE-OR . c-TEST/TEST-NOT)
+       (SET-DIFFERENCE . c-TEST/TEST-NOT)
+       (COUNT . c-TEST/TEST-NOT)
+       (NSUBLIS . c-TEST/TEST-NOT)
+       (SET-EXCLUSIVE-OR . c-TEST/TEST-NOT)
+       (DELETE . c-TEST/TEST-NOT)
+       (NSUBST . c-TEST/TEST-NOT)
+       (SUBLIS . c-TEST/TEST-NOT)
+       (DELETE-DUPLICATES . c-TEST/TEST-NOT)
+       (NSUBSTITUTE . c-TEST/TEST-NOT)
+       (SUBSETP . c-TEST/TEST-NOT)
+       (FIND . c-TEST/TEST-NOT)
+       (NUNION . c-TEST/TEST-NOT)
+       (SUBST . c-TEST/TEST-NOT)
+       (INTERSECTION . c-TEST/TEST-NOT)
+       (POSITION . c-TEST/TEST-NOT)
+       (SUBSTITUTE . c-TEST/TEST-NOT)
+       (MEMBER . c-TEST/TEST-NOT)
+       (RASSOC . c-TEST/TEST-NOT)
+       (TREE-EQUAL . c-TEST/TEST-NOT)
+       (MISMATCH . c-TEST/TEST-NOT)
+       (REMOVE . c-TEST/TEST-NOT)
+       (UNION . c-TEST/TEST-NOT)
+       (NINTERSECTION . c-TEST/TEST-NOT)
+       (REMOVE-DUPLICATES . c-TEST/TEST-NOT)
+       ;;
        (LDB . c-LDB)
        (LDB-TEST . c-LDB-TEST)
        (MASK-FIELD . c-MASK-FIELD)
@@ -7941,6 +7972,21 @@ for-value   NIL or T
   (c-seqop ASSOC 2)
   (c-seqop RASSOC 2)
 )
+
+;; :TEST (COMPLEMENT foo) ==> :TEST-NOT foo
+;; :TEST-NOT (COMPLEMENT foo) ==> :TEST foo
+(defun c-TEST/TEST-NOT ()
+  (let ((*form* *form*) modified)
+    (do ((pos *form* (cdr pos)) (idx 0 (1+ idx)))
+        ((null pos))
+      (when (and (or (eq (car pos) :test) (eq (car pos) :test-not))
+                 (inlinable-function-operation-form-p
+                  (second pos) 'COMPLEMENT))
+        (unless modified
+          (setq modified t *form* (copy-list *form*) pos (nthcdr idx *form*)))
+        (setf (car pos) (case (car pos) (:test :test-not) (:test-not :test))
+              (cadr pos) (second (cadr pos)))))
+    (c-GLOBAL-FUNCTION-CALL (car *form*))))
 
 ;; Recognizes a constant byte specifier and returns it, or NIL.
 (defun c-constant-byte-p (form)
